start rebuilding globgalMS